fixing config path and logging and adding proper sphinx documentation

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -56,7 +56,7 @@ html:
 
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
-	@echo
+	@echo®®®
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/dirhtml."
 
 singlehtml:
