Updated Full Integration test with destroy and key deletion, updated yaml and build.sh for new conda-build

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,11 +1,11 @@
 package:
   name: doto
-  version: 0.2
+  version: 0.3
 
 requirements:
   build:
     - python
-    - distribute
+    - setuptools
 
   run:
     - python
