--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ install:
 
   # Install dependencies
   - sudo conda init
-  - conda create -p $HOME/py -c https://conda.binstar.org/quasiben --yes six requests pycrypto "python=$TRAVIS_PYTHON_VERSION"
+  - conda create -p $HOME/py -c https://conda.binstar.org/quasiben --yes six requests pycrypto setuptools "python=$TRAVIS_PYTHON_VERSION"
   - export PATH=$HOME/py/bin:$PATH
   - conda install --yes -n $HOME/py pip
   - pip install git+https://github.com/quasiben/doto.git
   # Install doto
-  - python setup.py install
+  - python setup.py install --single-version-externally-managed --record=/tmp/record.txt
 
 script: cd $HOME; $HOME/py/bin/python -c 'import doto;'
