--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,23 @@ language: python
 
 python:
   - "2.7"
-  - "3.3"
+  - "3.4"
 
 # Note: conda is not available for anything but python 2.7. So below we try to install
 # conda in 2.7 and use conda to install dependencies in the virtualenv for version x.y
 install:
   # Install conda
-  - sudo pip install conda
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update conda
 
   # Install dependencies
-  - sudo conda init
-  - conda create -p $HOME/py -c https://conda.binstar.org/quasiben --yes six requests pycrypto setuptools "python=$TRAVIS_PYTHON_VERSION"
-  - export PATH=$HOME/py/bin:$PATH
-  - conda install --yes -n $HOME/py pip
-  - pip install git+https://github.com/quasiben/doto.git
+  - conda create -n test-environment python=$TRAVIS_PYTHON_VERSION requests pip setuptools six pycrypto 
+  - source activate test-environment
+
   # Install doto
   - python setup.py install --single-version-externally-managed --record=/tmp/record.txt
 
-script: cd $HOME; $HOME/py/bin/python -c 'import doto;'
+script: cd $HOME; python -c 'import doto;'
